[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/button_square_9.png" type="Texture" id=1]
[ext_resource path="res://HelpScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/button_round_9.png" type="Texture" id=3]
[ext_resource path="res://ui/buttons_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/help/move.png" type="Texture" id=5]
[ext_resource path="res://assets/help/tile.png" type="Texture" id=6]

[node name="HelpScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 487.0
margin_bottom = 244.0
texture = ExtResource( 6 )
stretch_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Box" type="NinePatchRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 200 )
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -83.0
margin_right = 150.0
margin_bottom = 83.0
custom_constants/separation = 8
alignment = 1

[node name="Title" type="CenterContainer" parent="CanvasLayer/Box/VBoxContainer"]
margin_right = 300.0
margin_bottom = 13.0

[node name="Label" type="Label" parent="CanvasLayer/Box/VBoxContainer/Title"]
margin_left = 136.0
margin_right = 164.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Help"
align = 1

[node name="MainHelp" type="CenterContainer" parent="CanvasLayer/Box/VBoxContainer"]
margin_top = 21.0
margin_right = 300.0
margin_bottom = 121.0
rect_min_size = Vector2( 200, 100 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Box/VBoxContainer/MainHelp"]
margin_left = 75.0
margin_right = 225.0
margin_bottom = 100.0
texture = ExtResource( 5 )

[node name="HelpText" type="MarginContainer" parent="CanvasLayer/Box/VBoxContainer"]
margin_top = 129.0
margin_right = 300.0
margin_bottom = 142.0

[node name="Label" type="Label" parent="CanvasLayer/Box/VBoxContainer/HelpText"]
margin_right = 300.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "swipe to move"
align = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="CanvasLayer/Box/VBoxContainer"]
margin_top = 150.0
margin_right = 300.0
margin_bottom = 166.0
custom_constants/separation = 8
alignment = 1

[node name="Back" type="MarginContainer" parent="CanvasLayer/Box/VBoxContainer/ButtonsContainer"]
margin_left = 106.0
margin_right = 146.0
margin_bottom = 16.0

[node name="NinePatchRectBack" type="NinePatchRect" parent="CanvasLayer/Box/VBoxContainer/ButtonsContainer/Back"]
margin_right = 40.0
margin_bottom = 16.0
rect_min_size = Vector2( 40, 16 )
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="BackButton" type="TextureButton" parent="CanvasLayer/Box/VBoxContainer/ButtonsContainer/Back/NinePatchRectBack"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CanvasLayer/Box/VBoxContainer/ButtonsContainer/Back/NinePatchRectBack"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -28.0
margin_top = -13.0
margin_right = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Back"
align = 1
valign = 1

[node name="Next" type="MarginContainer" parent="CanvasLayer/Box/VBoxContainer/ButtonsContainer"]
margin_left = 154.0
margin_right = 194.0
margin_bottom = 16.0
rect_min_size = Vector2( 40, 0 )

[node name="NinePatchRectNext" type="NinePatchRect" parent="CanvasLayer/Box/VBoxContainer/ButtonsContainer/Next"]
margin_right = 40.0
margin_bottom = 16.0
rect_min_size = Vector2( 40, 16 )
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="NextButton" type="TextureButton" parent="CanvasLayer/Box/VBoxContainer/ButtonsContainer/Next/NinePatchRectNext"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CanvasLayer/Box/VBoxContainer/ButtonsContainer/Next/NinePatchRectNext"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -28.0
margin_top = -13.0
margin_right = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Next"
align = 1
valign = 1

[connection signal="pressed" from="CanvasLayer/Box/VBoxContainer/ButtonsContainer/Back/NinePatchRectBack/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Box/VBoxContainer/ButtonsContainer/Next/NinePatchRectNext/NextButton" to="." method="_on_NextButton_pressed"]
